# zstd-fstream

./: .clang-format  .gitattributes  .gitignore  CMakeLists.txt  conanfile.py  pip-requirements.txt  pyproject.toml
cmake/: utils.cmake
hooks/: pre-commit
libzstdstream/: CMakeLists.txt
libzstdstream/include/zstdstream/: version.hpp.in  zstdstream.hpp
libzstdstream/internal_include/zstdstream/: zstdstream_impl.hpp
libzstdstream/src/: zstdstream.cpp  zstdstream_impl.cpp
test/: CMakeLists.txt  CMakeLists.txt.zst  main.cpp
